--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,6 +106,13 @@ body {
 /* Add this to force dark theme on all elements */
 * {
 	color-scheme: dark;
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera globally */
+*::-webkit-scrollbar {
+	display: none;
 }
 
 /* Cursor pointer on all buttons */
